@@ -159,6 +159,7 @@ include_directories(
 
 add_library(OrthancPython SHARED
   Sources/Autogenerated/sdk.cpp
+  Sources/IncomingHttpRequestFilter.cpp
   Sources/OnChangeCallback.cpp
   Sources/OnStoredInstanceCallback.cpp
   Sources/Plugin.cpp
