@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 => Minimum SDK version: 1.8.1 <=
 
+* New Python function: "orthanc.RegisterIncomingHttpRequestFilter()"
 * Support of Apple OS X
 * Fix issue #185 (segfaults on non-UTF8 special characters in request URI)
 
